--- a/tugas/_config.yml
+++ b/tugas/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
+title: KAL
 author: Muhammmad Firstya Ibrah Fakkar
 logo: LOGO.png
 
@@ -21,12 +21,16 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/firstyaibrah/alin  # Online location of your book
+  path_to_book: tugas  # Optional path to your book, relative to the repository root
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
   use_issues_button: true
   use_repository_button: true
+
+launch_buttons:
+  notebook_interface: "jupyterlab"  # or "classic"
+  colab_url: "https://colab.research.google.com" # The URL of Google Colab (https://colab.research.google.com)
